src/test/deca/context/invalid/return_invalid.deca
// Description :
// Return mauvais type .... donc echec
//
// Resultats :
// Echec
class Speaker {
    int annonce() {
        return "GOOOOL";
    }
}
{
}
